# strand-sdk

./: .gitignore  API_RESEARCH.md  ARCHITECTURE_PATTERNS.md  CONTRIBUTING.md  Cargo.toml  EXECUTION_PLAN.md  LIBRARY_RECOMMENDATIONS.md  LICENSE  PHASE5_SUMMARY.md  QUICK_REFERENCE.md  README.md  REFACTOR_SUMMARY.md  pyproject.toml  requirements-dev.txt  requirements.txt
benchmarks/: benchmark_optimizers.py  benchmark_results.md
campaigns/abca4/: .marimo.toml  README.md  pyproject.toml  requirements.txt  tasks.py
campaigns/abca4/__marimo__/session/: 01_data_exploration.py.json  02_feature_engineering.py.json  04_fasta_exploration.py.json
campaigns/abca4/docs/research/: data_source_and_orchestration_plan.md  data_source_and_orchestration_report.md  env_notes.md  implementation_readiness_checklist.md
campaigns/abca4/notebooks/: 01_data_exploration.py  02_feature_engineering.py  03_optimization_dashboard.py  04_fasta_exploration.py  README.md
campaigns/abca4/notebooks/__marimo__/session/: 01_data_exploration.py.json  04_fasta_exploration.py.json
campaigns/abca4/src/: __init__.py
campaigns/abca4/src/annotation/: annotate_transcripts.py
campaigns/abca4/src/data/: __init__.py  download_alphamissense.py  download_clinvar.py  download_gnomad.py  download_spliceai.py  filter_abca4_variants.py
campaigns/abca4/src/data/domains/: abca4_domains.json
campaigns/abca4/src/features/: assemble_features.py  conservation.py  missense.py  regulatory.py  splice.py
campaigns/abca4/src/reporting/: generate_snapshot.py
campaigns/abca4/src/reward/: run_abca4_optimization.py
configs/examples/ctrl_dna/: hyenadna_rl.yaml
configs/examples/rare_variant_triage/: rare_variant_triage.yaml
configs/rewards/: hnspc_profile.yaml  rpe_profile.yaml
docs/: CTRL_DNA_PACKAGES_RESEARCH.md  api_reference.md  examples.md  faq.md  getting_started.md  index.md  linting_and_quality.md  optimization_methods.md  reward_blocks.md  testing.md
docs/architecture/: strategy_context.md
docs/data/: sequence_datasets.md
docs/deployment/: reproducibility.md
docs/research/: concept.md
docs/research/mpra/: IMPLEMENTATION.md  README.md  example.py
docs/tutorial/: core_concepts.md  ctrl_dna_pipeline.md  quick_start.md  rare_variant_triage.md
examples/: basic_optimization.py  custom_reward_function.py  engine_basic.py  engine_ctrl_dna_hybrid.py  engine_with_tracking.py  export_and_reproducibility.py  protein_stability_novelty.py
scripts/datasets/ctrl_dna/: download_promoters.py
src/: main.rs
src/features/biocode-demo/docs/active/: biocode-demo.html  geneloop-showcase.html  geneloop-showcase.js
src/features/branding/docs/planned/: plan-geneloop-splash-2025-10-21.md
src/features/commands/: mod.rs
strand/: __init__.py
strand-sdk/: README.md
strand-sdk/benchmarks/: benchmark_rewards.py
strand-sdk/docs/: examples.md  faq.md  manifests.md  optimization_methods.md  reward_blocks.md
strand-sdk/examples/: cloud_api_integration.py  dna_multi_objective.py
strand-sdk/strand/cli/: __init__.py  cli.py
strand-sdk/strand/core/: __init__.py  results.py  sequence.py
strand-sdk/strand/manifests/: __init__.py
strand-sdk/strand/models/: biobert.py  protbert.py
strand-sdk/strand/optimizers/: cmaes.py  random.py
strand-sdk/strand/rewards/: __init__.py  novelty.py  registry.py  solubility.py
strand-sdk/strand/utils/: __init__.py  logging.py  validation.py
strand-sdk/tests/: test_cem.py  test_manifests.py  test_rewards.py  test_utils.py
strand-sdk/tests/fixtures/: baseline_proteins.txt  synthetic_results.json
strand-sdk/tests/integration/: test_end_to_end.py
strand/cli/: cli.py
strand/cli/commands/: run_ctrl_dna.py  run_variant_triage.py
strand/core/: __init__.py  optimizer.py  sequence.py
strand/data/: sequence_dataset.py  variant_dataset.py
strand/engine/: __init__.py  constraints.py  engine.py  interfaces.py  rules.py  runtime.py  score.py  types.py
strand/engine/constraints/: __init__.py  dual.py  solver.py
strand/engine/executors/: factory.py  local.py  pool.py  torch.py  variant_executor.py
strand/engine/strategies/: __init__.py  cem.py  cmaes.py  cmaes_varlen.py  ga.py  hybrid.py  random.py  rl_policy.py  runtime_adapter.py  variant_strategy.py
strand/engine/strategies/ensemble/: __init__.py  hybrid.py
strand/engine/strategies/evolutionary/: __init__.py  cem.py  ga.py
strand/engine/strategies/rl/: __init__.py  policy_heads.py  rl_policy.py
strand/engine/utils/: __init__.py  checkpoint.py  encoding.py  metrics.py  mutation.py  seeds.py
strand/evaluators/: composite.py  reward_aggregator.py  variant_composite.py
strand/logging/: __init__.py  mlflow_tracker.py
strand/manifests/: manifest.py  serializers.py
strand/models/: __init__.py  embedding_cache.py  esmfold.py  hyenadna.py
strand/optimizers/: __init__.py  base.py  cem.py  genetic.py
strand/rewards/: __init__.py  base.py  conservation.py  custom.py  enformer_block.py  gc_content.py  length_penalty.py  motif_delta.py  novelty.py  registry.py  solubility.py  stability.py  tfbs_block.py  virtual_cell_delta.py
strand/rewards/advanced/: __init__.py
strand/rewards/basic/: __init__.py
strand/utils/: config.py  distances.py
tests/: conftest.py  test_cmaes.py  test_optimizer.py  test_utils.py
tests/abca4/: test_pipeline.py
tests/engine/: __init__.py  test_cmaes_impl.py  test_constraint_solver.py  test_dual_manager.py  test_engine.py  test_ga.py  test_local_pool_executor.py  test_score.py  test_strategies.py  test_strategy_caps.py
tests/evaluators/: test_reward_aggregator.py
tests/executors/: test_factory.py  test_pool_executor.py
tests/fixtures/: sample_sequences.json
tests/logging/: __init__.py  test_mlflow_tracker.py
tests/rewards/: __init__.py  test_basic.py  test_enformer_block.py  test_gc_content.py  test_tfbs_block.py
tests/smoke/: test_ctrl_dna_pipeline.py
tests/strategies/: test_hybrid.py
