[package]
name = "geneloop-cli"
version = "0.1.0"
edition = "2021"
description = "GeneLoop CLI — terminal-native AI workflows (fork-style demo)"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.27"
supports-color = "3"
palette = { version = "0.7", features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
dotenvy = "0.15"

[[bin]]
name = "geneloop"
path = "src/main.rs"
