[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strand"
version = "0.1.0a0"
description = "Biological sequence optimization SDK"
readme = "README.md"
authors = [{ name = "Strand Team", email = "hello@strand.bio" }]
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.1",
    "rich>=13.7",
    "pydantic>=2.6",
]

[project.optional-dependencies]
models = [
    "torch>=2.2",
    "transformers>=4.40",
]
cli = [
    "typer>=0.12",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["strand*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
