[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strand-sdk"
version = "0.1.0"
description = "A Python toolkit for optimizing biological sequences with composable reward blocks and interchangeable optimization backends."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Seth Morton", email = "seth@example.com"},
]
keywords = [
    "bioinformatics",
    "protein-design",
    "sequence-optimization",
    "machine-learning",
    "synthetic-biology",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.21.0",
    "pydantic>=2.0.0",
    "scipy>=1.7.0",
    "tqdm>=4.60.0",
    "torch>=2.0.0",
    "accelerate>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

models = [
    "transformers>=4.20.0",
    "torch>=2.0.0",
    "biotite>=0.40.0",
]

cloud = [
    "requests>=2.28.0",
    "httpx>=0.24.0",
]

docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/sethmorton/strand-sdk"
Documentation = "https://github.com/sethmorton/strand-sdk/tree/main/docs"
Repository = "https://github.com/sethmorton/strand-sdk.git"
Issues = "https://github.com/sethmorton/strand-sdk/issues"
Changelog = "https://github.com/sethmorton/strand-sdk/releases"

[tool.setuptools]
packages = ["strand"]

[tool.setuptools.package-data]
strand = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312", "py313", "py314"]
extend-exclude = '''
/(
  | \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".venv",
    "venv",
    ".git",
    "__pycache__",
    ".pytest_cache",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear (security)
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "PIE",  # flake8-pie
    "RET",  # flake8-return
    "PT",   # flake8-pytest-style
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "B008",  # do not perform function calls in argument defaults
    "SIM108", # use ternary operator (sometimes less readable)
]

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["strand"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
